# AstroForge

Astraforge/backend/: README.md  alembic.ini  minimal_server.py  pyproject.toml  requirements-dev.txt  requirements.txt  simple_app.py
Astraforge/backend/app/: __init__.py  main.py  main_simple.py
Astraforge/backend/app/ai/: __init__.py  claude_provider.py  groq_provider.py  ideation_service.py  llm_provider.py  openai_provider.py  prompt_templates.py  provider_factory.py  response_parser.py
Astraforge/backend/app/api/: auth.py  gallery.py  missions.py  vehicle_presets.py
Astraforge/backend/app/core/: auth.py  config.py  database.py
Astraforge/backend/app/models/: __init__.py  database.py  mission.py
Astraforge/backend/app/optimization/: __init__.py  genetic_algorithm.py  multi_objective.py  operators.py
Astraforge/backend/app/physics/: __init__.py  orbital_mechanics.py
Astraforge/backend/app/schemas/: mission.py  vehicle_presets.py
Astraforge/backend/app/services/: auth_service.py  gallery_service.py  mission_service.py  optimization_service.py  (+3 more)
Astraforge/backend/docs/: api_implementation_summary.md  vehicle_presets.md
Astraforge/backend/migrations/: env.py
Astraforge/backend/scripts/: seed_database.py  seed_presets.py  validate_presets.py
Astraforge/backend/tests/: conftest.py  test_ai_integration.py  test_auth_api.py  test_auth_integration.py  test_auth_middleware_final.py  test_auth_middleware_integration.py  test_database.py  test_gallery_api.py  test_genetic_algorithm.py  test_ideation_service.py  test_llm_providers.py  test_main.py  test_mission_api.py  test_mission_generation.py  test_models.py  test_multi_objective.py  test_optimization_service.py  test_orbital_mechanics.py  test_simulation_service.py  test_validation_service.py  test_vehicle_presets.py  test_vehicle_presets_api.py
(+89 files in other folders)
